# SlashEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Slash.hpp  SlashPCH.cpp  SlashPCH.hpp  conanfile.txt  slash_pch.cpp  slash_pch.hpp
Test/: TestApp.cpp
TestApp/: TestApp.cpp
cmake/: StandardProjectSettings.cmake
src/Assets/: module.hpp
src/Core/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Timestep.hpp  Window.hpp  app.hpp  application.cpp  application.hpp  core.hpp  entry_point.hpp  event.hpp  events.hpp  input.hpp  key_codes.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  log.cpp  log.hpp  modules.hpp  resource.hpp  systems.hpp  time_step.hpp  window.hpp
src/Ecs/: componenet.hpp  component.hpp  ecs.hpp  entity.hpp
src/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
src/GameResources/: mesh.hpp  mesh_3d.hpp  mesh_manager.cpp  mesh_manager.hpp  model.hpp  model_manager.cpp  model_manager.hpp  object_info.hpp  pack.hpp  resource_manager.cpp  resource_manager.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp  transform.hpp
src/LayerModule/: layer.hpp  layer_stack.hpp  module.cpp  module.hpp
src/Platform/Linux/: LinuxInput.cpp  LinuxInput.hpp  LinuxWindow.cpp  LinuxWindow.hpp  input.cpp  linux_input.cpp  linux_input.hpp  linux_window.cpp  linux_window.hpp  window.cpp
src/Renderer/: Renderer.cpp  Renderer.hpp  RendererAPI.hpp  Vertex.hpp  camera.hpp  imgui_layer.cpp  imgui_layer.hpp  renderer.cpp  renderer.hpp  renderer_api.hpp  vertex.hpp
src/RendererModule/: events.hpp  module.hpp  render_module.cpp  render_module.hpp
src/Scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
src/Shaders/: compile.sh  shader.frag  shader.vert
src/VulkanRenderer/: VulkanRendererAPI.cpp  VulkanRendererAPI.hpp  VulkanVertex.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_command_buffer_manager.cpp  vulkan_command_buffer_manager.hpp  vulkan_command_pool.cpp  vulkan_command_pool.hpp  vulkan_core.cpp  vulkan_core.hpp  vulkan_descriptor_manager.cpp  vulkan_descriptor_manager.hpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_pool.hpp  vulkan_descriptor_set_layout.cpp  vulkan_descriptor_set_layout.hpp  vulkan_discriptor_set.cpp  vulkan_discriptor_set.hpp  vulkan_fence.cpp  vulkan_fence.hpp  vulkan_imgui.cpp  vulkan_imgui.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_queue.cpp  vulkan_queue.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_rendererAPI.cpp  vulkan_rendererAPI.hpp  vulkan_renderpass.cpp  vulkan_renderpass.hpp  vulkan_semaphore.cpp  vulkan_semaphore.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_swap_chain.cpp  vulkan_swap_chain.hpp  vulkan_vertex.hpp
src/VulkanResources/: vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_frame_buffer.cpp  vulkan_frame_buffer.hpp  vulkan_index_buffer.cpp  vulkan_index_buffer.hpp  vulkan_mesh.hpp  vulkan_renderable_object.hpp  vulkan_resource_manager.cpp  vulkan_resource_manager.hpp  vulkan_texture.cpp  vulkan_texture.hpp  vulkan_vertex_buffer.cpp  vulkan_vertex_buffer.hpp
src/WindowModule/: events.hpp  input.cpp  input.hpp  module.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
